add hover text for r-repr-sci lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -128,10 +128,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="r-reproducible">
     <td>R for Reproducible Scientific Analysis</td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis"></a></td>
-    <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The R Gapminder Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis Main Site"></a></td>
+    <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis Reference Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
     <td>
       Thomas Wright,
       <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>,
