add hover text for make/auto lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -231,10 +231,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="make">
     <td>Automation and Make</td>
-    <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Make Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make Main Site"></a></td>
+    <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make Reference Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="Automation and Make Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
     </td>
