add hover text for matlab lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -242,10 +242,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="matlab">
     <td>Programming with MATLAB</td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB Main Site"></a></td>
+    <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB Reference Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="Programming with MATLAB Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
     </td>
