add hover text for db/sql lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -253,10 +253,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="sql">
     <td>Using Databases and SQL</td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL Main Site"></a></td>
+    <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL Reference Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="Using Databases and SQL Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#remram44">Rémi Rampin</a>,
       <a href="https://carpentries.org/maintainers/#henrykironde">Henry Senyondo</a>,
