--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -62,7 +62,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell Main Site"></a></td>
     <td><a href="{{site.github_url}}/shell-novice" target="_blank" class="icon-github" title="The Unix Shell GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice/reference" target="_blank" class="icon-eye" title="The Unix Shell Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_blank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gdevenyi">Gabriel Devenyi</a>,
       Colin Morris,
@@ -75,7 +75,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git Main Site"></a></td>
     <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git Refernce Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_blank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       Daisie Huang,
@@ -90,7 +90,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python Main Site"></a></td>
     <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
       Trevor Bekolay,
       Valentina Staneva,
@@ -104,7 +104,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder" target="_blank" class="icon-browser" title="Plotting and Programming in Python Main Site"></a></td>
       <td><a href="{{site.github_url}}/python-novice-gapminder" target="_blank" class="icon-github" title="Plotting and Programming in Python GitHub Repo"></a></td>
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python Reference Guide"></a></td>
-      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
+      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
       <td>
           Nathan Moore,
           <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
@@ -118,7 +118,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R Main Site"></a></td>
     <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>, 
       <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>,
@@ -131,7 +131,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis Main Site"></a></td>
     <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
     <td>
       Thomas Wright,
       <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>,
@@ -166,7 +166,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice-es" target="_blank" class="icon-browser" title="La Terminal de Unix"></a></td>
     <td><a href="{{site.github_url}}/shell-novice-es" target="_blank" class="icon-github" title="La Terminal de Unix"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice-es/reference" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
-    <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       Clara Llebot, 
@@ -181,7 +181,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice-es" target="_blank" class="icon-browser" title="Control de versiones con Git"></a></td>
     <td><a href="{{site.github_url}}/git-novice-es" target="_blank" class="icon-github" title="Control de versiones con Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Control de versiones con Git"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Notes"></a></td>
     <td>
        <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
@@ -194,7 +194,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es" target="_blank" class="icon-browser" title="R para Análisis Científicos Reproducibles"></a></td>
       <td><a href="{{site.github_url}}/r-novice-gapminder-es" target="_blank" class="icon-github" title="R para Análisis Científicos Reproducibles"></a></td>
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/reference" target="_blank" class="icon-eye" title="R para Análisis Científicos Reproducibles Reference"></a></td>
-      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_bank" class="icon-circle-with-plus" title="R para Análisis Científicos Reproducibles Instructor Notes"></a></td>
+      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_blank" class="icon-circle-with-plus" title="R para Análisis Científicos Reproducibles Instructor Notes"></a></td>
       <td>
           <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
           Verónica Jiménez, 
@@ -234,7 +234,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make Main Site"></a></td>
     <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="Automation and Make Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_blank" class="icon-circle-with-plus" title="Automation and Make Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
     </td>
@@ -245,7 +245,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB Main Site"></a></td>
     <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="Programming with MATLAB Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with MATLAB Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
     </td>
@@ -256,7 +256,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL Main Site"></a></td>
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL GitHub Repo"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL Reference Guide"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="Using Databases and SQL Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_blank" class="icon-circle-with-plus" title="Using Databases and SQL Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#remram44">Rémi Rampin</a>,
       <a href="https://carpentries.org/maintainers/#henrykironde">Henry Senyondo</a>,
