--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -47,8 +47,8 @@ All instructors are volunteers, but the Host needs to cover their travel expense
 </p>
 
 <p>
-<h4>Self organized workshops</h4>
-Software Carpentry welcomes you to organize and run your own workshop without administrative assistance from our staff.  This means you are already connected with our certified instructors and will work with them on all aspects of workshop organization, including curriculum and lesson planning as well as logistical details such as student registration. In order to use the Software Carpentry name and logo at your event, we only require that you follow our curriculum, have at least one badged instructor teaching and co-organizing your event, and let us know that you're organizing a workshop. There is no fee (mandated or suggested) due to us for running a self-organized workshop.
+<h4>Self-Organised workshops</h4>
+Software Carpentry welcomes you to organize and run your own workshop without administrative assistance from our staff.  This means you are already connected with our certified instructors and will work with them on all aspects of workshop organization, including curriculum and lesson planning as well as logistical details such as student registration. In order to use the Software Carpentry name and logo at your event, we only require that you follow our curriculum, have at least one badged instructor teaching and co-organizing your event, and let us know that you're organizing a workshop. There is no fee (mandated or suggested) due to us for running a Self-Organised workshop.
 </p>
 
 <p>
