remove references to two day workshops

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -9,7 +9,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
 
 <p>
-  A Software Carpentry workshop is taught by at least one trained and badged instructor. Over two days, instructors teach our three core topics: the Unix shell, version control with Git, and a programming language (Python or R). Curricula for these lessons in English and Spanish (select lessons only) are below. 
+  A Software Carpentry workshop is taught by at least one trained and badged instructor. Over the course of the workshop, instructors teach our three core topics: the Unix shell, version control with Git, and a programming language (Python or R). Curricula for these lessons in English and Spanish (select lessons only) are below. 
 </p>
 
 <p>
