--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -13,7 +13,7 @@ redirect_from:
 excerpt: definition of a Software Carpentry workshop
 ---
 <p>
-  A Software Carpentry workshop is a hands-on, two-day event
+  A Software Carpentry workshop is a hands-on training
   that covers the core skills needed to be productive in a small research team.
   Short tutorials alternate with practical exercises,
   and all instruction is done via live coding.
