--- a/pages/workshops_pitch.html
+++ b/pages/workshops_pitch.html
@@ -16,7 +16,7 @@ excerpt: how to pitch a Software Carpentry workshop at your institution
 <p>
   The aim of Software Carpentry is to teach researchers the fundamental skills that will help them be more productive
   while producing work of higher quality.
-  We do that by teaching two day workshops,
+  We do that by teaching workshops 
   where students learn how to automate tasks using the Unix shell,
   how to track and share work using version control,
   and how to write software in Python, R, or MATLAB that is readable, reusable, and reliable.
