Translate column titles for Spanish lessons

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -153,12 +153,12 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 <table class="table table-striped" style="width: 100%; max-width: 100%">
 
   <tr>
-    <th>Lesson</th>
-    <th>Site</th>
-    <th>Repository</th>
-    <th>Reference</th>
-    <th>Instructor Notes</th>
-    <th>Maintainer(s)</th>
+    <th>Lección</th>
+    <th>Sitio web</th>
+    <th>Repositorio</th>
+    <th>Referencias</th>
+    <th>Notas para Instructores</th>
+    <th>Mantenedore(s)</th>
   </tr>
   
   <tr>
