Use genderless version for instructors

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -157,7 +157,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <th>Sitio web</th>
     <th>Repositorio</th>
     <th>Referencias</th>
-    <th>Notas para Instructores</th>
+    <th>Notas para Instructoras/es</th>
     <th>Mantenedore(s)</th>
   </tr>
   
@@ -276,4 +276,3 @@ The Carpentries also shares <a href="https://carpentries.org/community-lessons/"
 </p>
 
 </p>
-
