Replace "mantenedores" for "Responsables del mantenimiento"

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -158,7 +158,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <th>Repositorio</th>
     <th>Referencias</th>
     <th>Notas para Instructoras/es</th>
-    <th>Mantenedore(s)</th>
+    <th>Reponsable(s) del mantenimiento</th>
   </tr>
   
   <tr>
