alphabetize names of maintainers in each row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -64,9 +64,9 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice/reference" target="_blank" class="icon-eye" title="The Unix Shell Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_blank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#gdevenyi">Gabriel Devenyi</a>,
+      <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>, <a href="https://carpentries.org/maintainers/#gdevenyi">Gabriel Devenyi</a>,
       Colin Morris,
-      <a href="https://carpentries.org/maintainers/#willpitchers">Will Pitchers</a>, <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
+      <a href="https://carpentries.org/maintainers/#willpitchers">Will Pitchers</a>
     </td>
   </tr>
 
@@ -78,8 +78,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_blank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
-      Daisie Huang,
-      <a href="https://carpentries.org/maintainers/#nhejazi">Nima Hejazi</a>, 
+      <a href="https://carpentries.org/maintainers/#nhejazi">Nima Hejazi</a>, Daisie Huang,
       <a href="https://carpentries.org/maintainers/#kekoziar">Katherine Koziar</a>, 
       Madicken Munk
     </td>
@@ -92,10 +91,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
-      Trevor Bekolay,
-      Valentina Staneva,
-      <a href="https://carpentries.org/maintainers/#annefou">Anne Fouilloux</a>, 
-      Maxim Belkin, Lauren Ko
+      Trevor Bekolay, Maxim Belkin, <a href="https://carpentries.org/maintainers/#annefou">Anne Fouilloux</a>, Lauren Ko, Valentina Staneva
     </td>
   </tr>
 
@@ -106,10 +102,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python Reference Guide"></a></td>
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
       <td>
-          Nathan Moore,
-          <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
-          Sourav Singh, 
-          <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
+        <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>, Nathan Moore,
+          Sourav Singh, <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
       </td>
   </tr>
 
@@ -120,9 +114,9 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>, 
       <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>,
-      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>
+      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>,
+      <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>
     </td>
   </tr>
 
@@ -133,10 +127,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
     <td>
-      Thomas Wright,
-      <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>,
+      <a href="https://carpentries.org/maintainers/#mawds">David Mawdsley</a>,
       <a href="https://carpentries.org/maintainers/#jcoliver">Jeffrey Oliver</a>,
-      <a href="https://carpentries.org/maintainers/#mawds">David Mawdsley</a>
+      Thomas Wright,
+      <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>
     </td>
   </tr>
 
@@ -169,8 +163,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de La Terminal de Unix"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
-      Clara Llebot, 
       Verónica Jiménez, 
+      Clara Llebot,
       Silvana Pereyra, 
       Heladia Salgado
     </td>
