remove maintainer on request

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -102,7 +102,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python Reference Guide"></a></td>
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
       <td>
-        <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>, Nathan Moore,
+        <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
           Sourav Singh, <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
       </td>
   </tr>
