remove maintainers on request

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -77,8 +77,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git Refernce Guide"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_blank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
-      <a href="https://carpentries.org/maintainers/#nhejazi">Nima Hejazi</a>, Daisie Huang,
       <a href="https://carpentries.org/maintainers/#kekoziar">Katherine Koziar</a>, 
       Madicken Munk
     </td>
@@ -91,7 +89,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
-      Trevor Bekolay, Maxim Belkin, <a href="https://carpentries.org/maintainers/#annefou">Anne Fouilloux</a>, Lauren Ko, Valentina Staneva
+      Trevor Bekolay, Maxim Belkin, Lauren Ko, Valentina Staneva
     </td>
   </tr>
 
@@ -114,7 +112,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>,
       <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>,
       <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>
     </td>
@@ -162,7 +159,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice-es/reference" target="_blank" class="icon-eye" title="Referencias de La Terminal de Unix"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de La Terminal de Unix"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       Verónica Jiménez, 
       Clara Llebot,
       Silvana Pereyra, 
@@ -177,7 +173,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Referencias de Control de versiones con Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de Control de versiones con Git"></a></td>
     <td>
-       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
       Clara Llebot
     </td>
