--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -77,6 +77,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git Refernce Guide"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_blank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
     <td>
+      <a href="https://carpentries.org/maintainers/#nhejazi">Nima Hejazi</a>,
       <a href="https://carpentries.org/maintainers/#kekoziar">Katherine Koziar</a>, 
       Madicken Munk
     </td>
