--- a/pages/reading.html
+++ b/pages/reading.html
@@ -50,6 +50,13 @@ excerpt: A list of books and articles we recommend
     </p>
   </li>
 
+    <li>
+    <p>
+      Belinda Weaver:
+      "<a href="https://espace.library.uq.edu.au/view/UQ:3bcd280">*The efficacy and usefulness of Software Carpentry training: a follow-up cohort study.* MPhil Thesis, School of Information Technology and Electrical Engineering, The University of Queensland, Brisbane, Australia.</a>",
+      2020
+    </p>
+  </li>
   <li>
     <p>
       Matthew Gentzkow and Jesse Shapiro:
