--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -65,8 +65,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_blank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>, Jacob Deppen, <a href="https://carpentries.org/maintainers/#gdevenyi">Gabriel Devenyi</a>,
-      Colin Morris,
-      <a href="https://carpentries.org/maintainers/#willpitchers">Will Pitchers</a>
+      Colin Morris
     </td>
   </tr>
 
