remove maintainer on request

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -89,7 +89,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
-      Trevor Bekolay, Maxim Belkin, Lauren Ko, Valentina Staneva
+      Trevor Bekolay, Maxim Belkin, Valentina Staneva
     </td>
   </tr>
 
