--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -4,8 +4,11 @@ permalink: /workshops/request/
 title: Request a Workshop
 redirect_from:
   - /workshops/request.html
+redirect_to:
+  - https://carpentries.org/workshops/#workshop-organising
 excerpt: how to request a Software Carpentry workshop at your institution
 ---
+
 <p>
   If you would like to host a Software Carpentry workshop at your institution, please fill in the form below to let us know a bit more about your needs and <a href="https://carpentries.org/regionalcoordinators/">one of our Regional Coordinators</a> will contact you as soon as possible. For more information on how our workshops are run, please read our <a href="https://docs.carpentries.org/topic_folders/workshop_administration/workshop_admin_workflow.html">operations guide</a>.
 </p>
