Add language indicating blog is inactive

--- a/pages/index.html
+++ b/pages/index.html
@@ -49,8 +49,8 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   <div class="medium-12 columns">
     <h3>Recent Blog Posts</h3>
     <p>
-      In addition of the posts below,
-      find out what's happening in our community through
+      The Data Carpentry blog is no longer updated regularly.
+     You can find more information about what's happening in our community through
       <a href="https://carpentries.org/blog">The Carpentries blog</a>,
       a great resource that collates posts from Data Carpentry,
       Library Carpentry, and Software Carpentry, and
