Remove retiring Maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -64,8 +64,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice/reference" target="_blank" class="icon-eye" title="The Unix Shell Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_blank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>, Jacob Deppen, <a href="https://carpentries.org/maintainers/#gdevenyi">Gabriel Devenyi</a>,
-      Colin Morris
+      <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>, Jacob Deppen
     </td>
   </tr>
 
@@ -89,7 +88,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
-      Trevor Bekolay, Maxim Belkin, Valentina Staneva
+      Maxim Belkin, Valentina Staneva
     </td>
   </tr>
 
@@ -112,8 +111,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>,
-      <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>
+      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>
     </td>
   </tr>
 
@@ -124,8 +122,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#mawds">David Mawdsley</a>,
-      <a href="https://carpentries.org/maintainers/#jcoliver">Jeffrey Oliver</a>,
       Thomas Wright,
       <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>
     </td>
@@ -173,7 +169,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Referencias de Control de versiones con Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de Control de versiones con Git"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
       Clara Llebot
     </td>
   </tr>
@@ -185,8 +180,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/reference" target="_blank" class="icon-eye" title="Referencias de R para Análisis Científicos"></a></td>
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de R para Análisis Científicos Reproducibles"></a></td>
       <td>
-          <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
-          Verónica Jiménez, 
+        Verónica Jiménez, 
         Silvana Pereyra, 
         Heladia Salgado
       </td>
