Remove retiring Maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -88,7 +88,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
-      Maxim Belkin, Valentina Staneva
     </td>
   </tr>
 
@@ -122,7 +121,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
     <td>
-      Thomas Wright,
       <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>
     </td>
   </tr>
@@ -249,9 +247,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_blank" class="icon-circle-with-plus" title="Using Databases and SQL Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#remram44">Rémi Rampin</a>,
-      <a href="https://carpentries.org/maintainers/#henrykironde">Henry Senyondo</a>,
-      <a href="https://carpentries.org/maintainers/#r4space">Jane Wyngaard</a>
+      <a href="https://carpentries.org/maintainers/#henrykironde">Henry Senyondo</a>
     </td>
   </tr>
 
