add new maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -64,7 +64,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice/reference" target="_blank" class="icon-eye" title="The Unix Shell Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_blank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>, Jacob Deppen
+      <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>, Jacob Deppen, Benson Muite
     </td>
   </tr>
 
@@ -75,6 +75,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git Refernce Guide"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_blank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
     <td>
+      Scott Gruber,
       <a href="https://carpentries.org/maintainers/#nhejazi">Nima Hejazi</a>,
       <a href="https://carpentries.org/maintainers/#kekoziar">Katherine Koziar</a>, 
       Madicken Munk
@@ -88,6 +89,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
+      Toan Phung
     </td>
   </tr>
 
@@ -121,7 +123,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="R for Reproducible Scientific Analysis Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>
+      Matthieu Bruneaux, Sehrish Kanwal, <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>
     </td>
   </tr>
 
@@ -167,7 +169,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Referencias de Control de versiones con Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de Control de versiones con Git"></a></td>
     <td>
-      Clara Llebot
+      Jean-Paul Courneya, Clara Llebot, Mariana Patricia Gomez Nicolas
     </td>
   </tr>
 
