add one more Maintainer

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -182,7 +182,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td>
         Verónica Jiménez, 
         Silvana Pereyra, 
-        Heladia Salgado
+        Heladia Salgado,
+        Nelly Sélem
       </td>
   </tr>
 </table>
