--- a/pages/index.html
+++ b/pages/index.html
@@ -49,7 +49,7 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   <div class="medium-12 columns">
     <h3>Recent Blog Posts</h3>
     <p>
-      The Data Carpentry blog is no longer updated regularly.
+      The Software Carpentry blog is no longer updated regularly.
      You can find more information about what's happening in our community through
       <a href="https://carpentries.org/blog">The Carpentries blog</a>,
       a great resource that collates posts from Data Carpentry,
