remove retiring Maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -156,8 +156,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de La Terminal de Unix"></a></td>
     <td>
       Verónica Jiménez, 
-      Clara Llebot,
-      Silvana Pereyra, 
+      Clara Llebot, 
       Heladia Salgado
     </td>
   </tr>
@@ -181,7 +180,6 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_blank" class="icon-circle-with-plus" title="Notas para las personas instructoras de R para Análisis Científicos Reproducibles"></a></td>
       <td>
         Verónica Jiménez, 
-        Silvana Pereyra, 
         Heladia Salgado,
         Nelly Sélem
       </td>
@@ -239,7 +237,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with MATLAB Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
+      <a href="https://carpentries.org/maintainers/#gcapes"></a>
     </td>
   </tr>
 
