add new Maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -101,7 +101,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_blank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
       <td>
         <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
-          Sourav Singh, <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
+          Sourav Singh, Martino Sorbaro, <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
       </td>
   </tr>
 
@@ -112,7 +112,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_blank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>
+      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>, Hugo Gruson, Isaac Jennings
     </td>
   </tr>
 
