--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -226,7 +226,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB Reference Guide"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/instructor/instructor-notes" target="_blank" class="icon-circle-with-plus" title="Programming with MATLAB Instructor Notes"></a></td>
     <td>
-      <a href="https://carpentries.org/maintainers/#gcapes"></a>
+      We are looking for maintainers for this lesson. Please contact <a href="mailto:curriculum@carpentries.org">curriculum@carpentries.org</a> if you are interested.
     </td>
   </tr>
 
