Add Martino Sorbaro to Git Lesson

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -78,7 +78,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       Scott Gruber,
       <a href="https://carpentries.org/maintainers/#nhejazi">Nima Hejazi</a>,
       <a href="https://carpentries.org/maintainers/#kekoziar">Katherine Koziar</a>, 
-      Madicken Munk
+      Madicken Munk,
+      Martino Sorbaro
     </td>
   </tr>
 
@@ -101,7 +102,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/instructor/instructor-notes" target="_blank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
       <td>
         <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
-          Sourav Singh, Martino Sorbaro, <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
+          Sourav Singh, <a href="https://carpentries.org/maintainers/#vahtras">Olav Vahtras</a>
       </td>
   </tr>
 
