rm reference to older lessons

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -26,7 +26,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   <div class="medium-4 columns">
     <h4 id="curriculum">Curriculum</h4>
     <p>
-      Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>. You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>, or look at <a href="{{site.baseurl}}/lessons/previous">older releases</a>.  Our <a href="{{site.baseurl}}/curriculum-advisors">Curriculum Advisors</a> are part of a team that provides the oversight, vision, and leadership towards lesson development.
+      Our lessons are developed collaboratively on <a href="{{site.github_url}}">GitHub</a>. You can check the status of each lesson on <a href="{{site.baseurl}}/lessons/dashboard/">our dashboard</a>.  Our <a href="{{site.baseurl}}/curriculum-advisors">Curriculum Advisors</a> are part of a team that provides the oversight, vision, and leadership towards lesson development.
     </p>
   </div>
   <div class="medium-4 columns">
