governance, not Executive Council

--- a/pages/governance.html
+++ b/pages/governance.html
@@ -6,7 +6,7 @@ title: Community Governance
 
 <h2 id="swcgc">Governance Committee</h2>
 
-<p>The Software Carpentry Governance Committee provides community leadership for the lesson program. The Committee is responsible for overseeing the strategy of the Software Carpentry project, and advocating for the program, its mission, and its community. The committee acts as a point of contact for Software Carpentry, representing the lesson program to The Carpentries <a href="https://carpentries.org/governance/">Executive Council</a>, the <a href="https://carpentries.org/team/">Core Team</a>, and the wider world. Members of the Group volunteer to serve two-year terms.</p>
+<p>The Software Carpentry Governance Committee provides community leadership for the lesson program. The Committee is responsible for overseeing the strategy of the Software Carpentry project, and advocating for the program, its mission, and its community. The committee acts as a point of contact for Software Carpentry, representing the lesson program to The Carpentries <a href="https://carpentries.org/governance/">Governance</a>, the <a href="https://carpentries.org/team/">Core Team</a>, and the wider world. Members of the Group volunteer to serve two-year terms.</p>
 
 <p>To contact the Software Carpentry Governance Committee, <a href="mailto:swc-governors@lists.carpentries.org">send an email to swc-governors@lists.carpentries.org</a>.</p>
 
