make past/upcoming workshops use includes block

--- a/pages/workshops_upcoming.html
+++ b/pages/workshops_upcoming.html
@@ -12,8 +12,8 @@ excerpt: listing of all our past workshops
 <div class="row">
   <div class="medium-12 columns">
 
-<b><a href="#">Check out our upcoming workshops here</a>.</b><hr>
-{% assign workshop_list = site.data.swc_past_workshops %}
+<b><a href="#">Check out our past workshops here</a>.</b><hr>
+{% assign workshop_list = site.data.swc_upcoming_workshops %}
 {% include workshop_table.md %}
 </div>
 </div>
