fix yaml frontmatter for workshop list pages

--- a/pages/workshops_upcoming.html
+++ b/pages/workshops_upcoming.html
@@ -1,11 +1,7 @@
 ---
 layout: page-fullwidth
-permalink: /workshops/past/
-title: Past Workshops
-map_url: workshops_past.json
-map_element: map_canvas
-redirect_from:
-  - /workshops/previous.html
+permalink: /workshops/upcoming/
+title: Upcoming Workshops
 excerpt: listing of all our past workshops
 ---
 
